--- a/index.html
+++ b/index.html
@@ -5,59 +5,59 @@
   <title>Semantic NYT</title>
 </head>
 <body>
-  <div class="masthead">
+  <header>
     <h1>New York Times</h1>
-    <div class="navigation">
-      <div class="list">
-        <div>
+    <nav>
+      <ul>
+        <li>
           <a href="world.html">World</a>
-        </div>
-        <div>
+        </li>
+        <li>
           <a href="sports.html">Sports</a>
-        </div>
-        <div>
+        </li>
+        <li>
           <a href="local.html">Local</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="content">
-    <div class="main-article">
-      <div class="article-heading">
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <article>
+      <header>
         <h2>Title Goes Here</h2>
         <p>September 2013</p>
-      </div>
-      <div>
+      </header>
+      <section>
         <h3>Mine explosion by the old well</h3>
         <p>Lorem Ipsum Dolor</p>
         <p>Lorem Ipsum Dolor</p>
         <h4>Dynamite to blame?</h4>
         <p>Lorem Ipsum Dolor</p>
-      </div>
-      <div>
+      </section>
+      <section>
         <h3>The water will be fine</h3>
         <p>Lorem Ipsum Dolor</p>
         <p>Lorem Ipsum Dolor</p>
         <p>Lorem Ipsum Dolor</p>
-      </div>
-      <div>
+      </section>
+      <section>
         <h3>A town rebuilding</h3>
         <p>Lorem Ipsum Dolor</p>
         <p>Lorem Ipsum Dolor</p>
         <p>Lorem Ipsum Dolor</p>
-      </div>
-      <div class="sidebar">
+      </section>
+      <section>
         <h3>Mine explosions throughout history</h3>
         <ul>
           <li>This happened</li>
           <li>And then this happened</li>
           <li>And... this happened</li>
         </ul>
-      </div>
+      </section>
       <div class="bottom">
         Contact the author at <a href="mailto:kyle.coberly@gmail.com"></a>
       </div>
-    </div>
+    </article>
     <div class="other-news">
       <h2>Also in the news</h2>
       <div class="collapsabile">
@@ -73,9 +73,9 @@
         <p>The Jets clobbered the Steelers in a total upset</p>
       </div>
     </div>
-  </div>
-  <div class="page-bottom">
+  </main>
+  <footer>
     <span class="legal">Copyright 2015, New York Times</span>
-  </div>
+  </footer>
 </body>
 </html>
