made a few changes at the bottom of the document

--- a/index.html
+++ b/index.html
@@ -54,25 +54,25 @@
           <li>And... this happened</li>
         </ul>
       </section>
-      <div class="bottom">
+      <address>
         Contact the author at <a href="mailto:kyle.coberly@gmail.com"></a>
-      </div>
+      </address>
     </article>
-    <div class="other-news">
+    <aside>
       <h2>Also in the news</h2>
-      <div class="collapsabile">
+      <article>
         <div class="teaser-text">Mets Game</div>
         <p>The Mets clobbered the Cubs in a total upset</p>
-      </div>
-      <div class="collapsabile">
+      </article>
+      <article>
         <div class="teaser-text">Knicks Game</div>
         <p>The Knicks clobbered the Bulls in a total upset</p>
-      </div>
-      <div class="collapsabile">
+      </article>
+      <article>
         <div class="teaser-text">Jets Game</div>
         <p>The Jets clobbered the Steelers in a total upset</p>
-      </div>
-    </div>
+      </article>
+    </aside>
   </main>
   <footer>
     <span class="legal">Copyright 2015, New York Times</span>
